--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -176,6 +176,9 @@ commands:
   halberdier:
     description: Selects the halberdier kit
     usage: /halberdier
+  maceman:
+    description: Selects the maceman kit
+    usage: /maceman
   spearman:
     description: Selects the spearman kit
     usage: /spearman
