Allow plugin to build again

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 [Tt]arget/
+ConwyCastleSiege/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+ConwyCastleSiege/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
