--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -103,9 +103,6 @@ commands:
   togglerank:
     description: Toggles the rank
     usage: /togglerank
-  Classicgui:
-    description: open classic gui
-    usage: /classicgui
   VoterKitGUI:
     description: open voterkit gui
     usage: /VoterKitGUI
@@ -209,3 +206,8 @@ commands:
   warhound:
     description: Selects the warhound kit
     usage: /warhound
+
+  # Kit GUIs
+  classicGUI:
+    description: Open the GUI for classic kits
+    usage: /classicGUI
