--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -103,9 +103,6 @@ commands:
   togglerank:
     description: Toggles the rank
     usage: /togglerank
-  VoterKitGUI:
-    description: open voterkit gui
-    usage: /VoterKitGUI
   KitThunderstoneGuards:
     description: open thunderstone GUI
     usage: /KitThunderstoneGuards
@@ -211,3 +208,6 @@ commands:
   classicGUI:
     description: Open the GUI for classic kits
     usage: /classicGUI
+  voterGUI:
+    description: Open the GUI for voter kits
+    usage: /voterGUI
