--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -76,12 +76,6 @@ commands:
   s:
     description: Talk in staff chat.
     usage: /s
-  r:
-    description: Reply to a message.
-    usage: /r
-  msg:
-    description: Message a player!
-    usage: /r
   togglerank:
     description: Toggles the rank
     usage: /togglerank
@@ -126,6 +120,19 @@ commands:
     usage: /teams
 
   # Chat
+  Message:
+    description: Privately message a player
+    usage: /msg <player> <message>
+    aliases:
+      - msg
+      - m
+      - whisper
+      - w
+  Reply:
+    description: Reply to the last player that sent you a private message
+    usage: /r <message>
+    aliases:
+      - r
   TeamChat:
     description: Talk in team-chat
     usage: /t <message>
@@ -134,63 +141,63 @@ commands:
       - t
 
   # Kits
-  kit:
+  Kit:
     description: Open the GUI for selecting kits
     usage: /kit <category>
-  archer:
+  Archer:
     description: Selects the archer kit
     usage: /archer
-  berserker:
+  Berserker:
     description: Selects the berserker kit
     usage: /berserker
-  cavalry:
+  Cavalry:
     description: Selects the cavalry kit
     usage: /cavalry
-  crossbowman:
+  Crossbowman:
     description: Selects the crossbowman kit
     usage: /crossbowman
-  engineer:
+  Engineer:
     description: Selects the engineer kit
     usage: /engineer
-  executioner:
+  Executioner:
     description: Selects the executioner kit
     usage: /executioner
-  firearcher:
+  FireArcher:
     description: Selects the firearcher kit
     usage: /firearcher
-  halberdier:
+  Halberdier:
     description: Selects the halberdier kit
     usage: /halberdier
-  ladderman:
+  Ladderman:
     description: Selects the ladderman kit
     usage: /ladderman
-  maceman:
+  Maceman:
     description: Selects the maceman kit
     usage: /maceman
-  medic:
+  Medic:
     description: Selects the medic kit
     usage: /medic
-  ranger:
+  Ranger:
     description: Selects the ranger kit
     usage: /ranger
-  scout:
+  Scout:
     description: Selects the scout kit
     usage: /scout
-  shieldman:
+  Shieldman:
     description: Selects the shieldman kit
     usage: /shieldman
-  skirmisher:
+  Skirmisher:
     description: Selects the skirmisher kit
     usage: /skirmisher
-  spearman:
+  Spearman:
     description: Selects the spearman kit
     usage: /spearman
-  swordsman:
+  Swordsman:
     description: Selects the swordsman kit
     usage: /swordsman
-  viking:
+  Viking:
     description: Selects the viking kit
     usage: /viking
-  warhound:
+  Warhound:
     description: Selects the warhound kit
     usage: /warhound
