--- a/ConwyCastleSiege/src/main/resources/flags.yml
+++ b/ConwyCastleSiege/src/main/resources/flags.yml
@@ -289,6 +289,7 @@ HelmsDeep:
             y: 43
             z: 1141
       7:
+        ==: me.huntifi.castlesiege.data_types.Frame
         primary_blocks:
           - "==": "Vector"
             x: 989
