Fixes horn flag animations

--- a/ConwyCastleSiege/src/main/resources/flags.yml
+++ b/ConwyCastleSiege/src/main/resources/flags.yml
@@ -970,6 +970,7 @@ HelmsDeep:
             y: 151
             z: 1037
       7:
+        ==: me.huntifi.castlesiege.data_types.Frame
         primary_blocks:
           - "==": Vector
             x: 985
